updated supporting info

--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -314,7 +314,7 @@ alyssa.cirtwill@gmail.com\\
 
     \subsection*{How many samples are required to reach a minimal precision}
 
-        In our dataset, the entire 95\% credible interval for the probability of an interaction between a \emph{Salix}-galler pair was (0.013, 0.049). We may therefore be 95\% confident that the interaction probability for \emph{Salix} and galler species that have not been observed co-occurring is below 0.05. As the peak of the prior distribution for the probability of interaction between \emph{Salix} and galler probabilities is around 0.02 (Fig.~\ref{Salix_pdfs}), to be 95\% confident that the interaction probability for these species is below 0.01 would require 1029 observed co-occurrences with no interaction - far more than the number of sites in the~\citep{Kopelke2017} dataset.
+        In our dataset, the 95\% credible interval for the probability of an interaction between a \emph{Salix}-galler pair was (0.013, 0.049). We may therefore be 95\% confident that the interaction probability for \emph{Salix} and galler species that have not been observed co-occurring is below 0.05. As the peak of the prior distribution for the probability of interaction between \emph{Salix} and galler probabilities is around 0.02 (Fig.~\ref{Salix_pdfs}), to be 95\% confident that the interaction probability for these species is below 0.01 would require 1029 observed co-occurrences with no interaction - far more than the number of sites in the~\citep{Kopelke2017} dataset.
 
 
     \subsection*{Scaling up to network metrics}
@@ -485,7 +485,7 @@ alyssa.cirtwill@gmail.com\\
 
 
       \begin{figure}[h!]
-        \caption{Using prior distribution based on the \emph{Salix}-galler and galler-natural enemy networks in~\citet{Barbour2016}, we can calculate posterior distributions for the probability of interaction ($\lambda_{ij}$) between two species that have not yet been observed interacting. Here we show posterior distributions for each $\lambda_{ij}$ in each network ranging from the prior distribution ($n_{ij}=0$ observed co-occurrence) to the distribution obtained when the pair of species has been observed co-occurring 100 times. The distribution narrows and approaches zero as the sample size increases. Likewise, the maximum likelihood estimator for the mean probability of interaction (diamonds at top of each panel) approaches zero and the 95\% credible interval (lines at top of each panel) narrows as sample size increases. \textbf{A)} The posterior distributions for the \emph{Salix}-galler component are always wider and farther from zero than those for \textbf{B)} the galler-natural enemy component. This is likely because the prior distribution for the galler-natural enemy component of the network was both narrower and had a mean closer to that in the~\citet{Kopelke2017} data than did the \emph{Salix}-galler component.}
+        \caption{Using prior distributions based on the \emph{Salix}-galler and galler-natural enemy networks in~\citet{Barbour2016}, we can calculate posterior distributions for the probability of interaction ($\lambda_{ij}$) between two species that have not yet been observed interacting. Here we show posterior distributions for each $\lambda_{ij}$ in each network ranging from the prior distribution ($n_{ij}=0$ observed co-occurrence) to the distribution obtained when the pair of species has been observed co-occurring 100 times. The distribution narrows and approaches zero as the sample size increases. Likewise, the maximum likelihood estimator for the mean probability of interaction (diamonds at top of each panel) approaches zero and the 95\% credible interval (lines at top of each panel) narrows as sample size increases. \textbf{A)} The posterior distributions for the \emph{Salix}-galler and \textbf{B)} the galler-natural enemy component are substantially wider than those obtained using the~\citet{Kopelke2017} data to inform the prior. This is likely because the mean probabilities of interaction in the~\citet{Barbour2016} data were substantially higher than those in the present study.}
         \label{Salix_pdfs}
         \begin{center}
         \includegraphics*[width=.65\textwidth]{figures/Salix_Galler_pdfs_increasing_N.eps}
@@ -497,7 +497,7 @@ alyssa.cirtwill@gmail.com\\
 
 
       \begin{figure}[h!]
-        \caption{The number of samples required to achieve a given level of confidence that an interaction probability $\lambda_{ij}$ is below a given threshold varies with both parameters. With a low threshold, our confidence that $\lambda_{ij}$ is below the threshold increases rapidly with repeated observation of co-occurrence without interaction. Here we show the cumulative density functions for threshold probabilities of 0.5 (solid line), 0.25 (dashed line), 0.1 (dash-dot line), and 0.05 (dotted line) as well as the points at which the cdf reaches 0.90 (orange square), 0.95 (red circle), and 0.975 (blue diamond) for each threshold value. The large ticks along the x-axis indicate the number of samples associated with each of these points. Note that the number of samples required to reach any given threshold is larger for \textbf{A)} the \emph{Salix}-galler network than for \textbf{B)} the galler-natural enemy network. In the galler-natural enemy network, the credible interval for a pair of species with no observed co-occurrences was 0.364. All pairs of species therefore have $\lambda_{ij}$\textless0.5.}
+        \caption{The number of samples required to achieve a given level of confidence that an interaction probability $\lambda_{ij}$ is below a given threshold varies with both parameters. With a low threshold, our confidence that $\lambda_{ij}$ is below the threshold increases rapidly with repeated observation of co-occurrence without interaction. Here we show the cumulative density functions for threshold probabilities of 0.5 (solid line), 0.25 (dashed line), 0.1 (dash-dot line), and 0.05 (dotted line) as well as the points at which the cdf reaches 0.90 (orange square), 0.95 (red circle), and 0.975 (blue diamond) for each threshold value. The large ticks along the x-axis indicate the number of samples associated with each of these points. Note that the number of samples required to reach any given threshold is larger for \textbf{A)} the \emph{Salix}-galler network than for \textbf{B)} the galler-natural enemy network. In the galler-natural enemy network, the maximum likelihood estimate for $\lambda_{ij}$ for a pair of species with no observed co-occurrences was 0.364. All pairs of species therefore have $\lambda_{ij}$\textless0.5.}
         \label{Salix_cdfs}
         \begin{center}
         \includegraphics[width=.65\textwidth]{figures/Salix_Galler_samples_and_cdfs.eps}
@@ -511,7 +511,7 @@ alyssa.cirtwill@gmail.com\\
       We find, perhaps not surprisingly, that the posterior webs for the Salix-galler network all had much higher connectance than the original, observed web (C=0.028 for the observed web and 0.528 $\leq$ C $\leq$ 0.568 for the posterior webs; Fig.~\ref{posterior_webs_Barbour}A). Likewise, the number of links per \emph{Salix} and galler species in the observed web ($L_{\emph{Salix}}$=2.71 and $L_{galler}$=1.47, respectively) were much lower than those predicted in the posterior webs (27.4 $\leq L_{\emph{Salix}} \leq$ 29.5 and 50.6 $\leq L_{galler} \leq $54.5, respectively; Fig.~\ref{posterior_webs_Barbour}C,E), even when filtering with a detection probability of only 50\%. Nestedness was also much higher in the posterior networks (14.2 $\leq NODF \leq$ 15.4; Fig.~\ref{posterior_webs_Barbour}G) than in the observed network (NODF=0.560). There are two possible explanations for these discrepancies: either the data of~\citet{Barbour2016} is simply too different from that of~\citet{Kopelke2017} to offer an appropriate prior for our dataset, or the true detection probability for links between \emph{Salix} and galler species is much less than 50\%. As the scale of the two datasets is quite different (genotypes of a single \emph{Salix} species in~\citet{Barbour2016}, various \emph{Salix} species in our dataset), we suspect the former is more likely.
 
 
-      Considering the galler-natural enemy networks, the connectance, mean links per galler, and mean links per natural enemy were also much lower in the observed web (C=0.078, $L_{galler}$=9.99, and $L_{natural enemy}$=7.45, respectively) than in the posterior webs (0.183 $\leq$ C $\leq$ 0.196, 17.5 $\leq L_{galler} \leq$ 18.9, and 23.0 $\leq L_{natural enemy} \leq$ 24.8). When the detection probability was relatively low (i.e., 50\%), however, the properties of randomised networks became similar to those in the observed webs (Fig.~\ref{posterior_webs_Barbour}B,D,F). Nestedness was higher in the observed network (NODF=6.85) than in the posterior networks (6.30 $\leq NODF \leq$ 6.74; Fig.~\ref{posterior_webs_Barbour}H), but network structure was much more similar in the observed and posterior galler-natural enemy networks than in the \emph{Salix}-galler networks. The~\citet{Barbour2016} network likely provides a better prior here than for the \emph{Salix}-galler networks, as both networks included different galler and natural enemy species. Although the two networks differ vastly in scale, and the inclusion of multiple \emph{Salix} species likely causes structural differences from~\citet{Barbour2016} despite the similar resolution of gallers and natural enemies, this result nevertheless suggests that even such a large and well-replicated network as that in~\citet{Kopelke2017} is missing many interactions. This should be a strong warning to researchers comparing structural characteristics between networks - small structural differences are likely to be masked by substantial noise resulting from sampling uncertainty.
+      Considering the galler-natural enemy networks, the connectance, mean links per galler, and mean links per natural enemy were also much lower in the observed web (C=0.078, $L_{galler}$=9.99, and $L_{natural enemy}$=7.45, respectively) than in the posterior webs (0.183 $\leq$ C $\leq$ 0.196, 17.5 $\leq L_{galler} \leq$ 18.9, and 23.0 $\leq L_{natural enemy} \leq$ 24.8). When the detection probability was relatively low (i.e., 50\%), however, the properties of randomised networks became similar to those in the observed webs (Fig.~\ref{posterior_webs_Barbour}B, D, F). Nestedness was higher in the observed network (NODF=6.85) than in the posterior networks (6.30 $\leq NODF \leq$ 6.74; Fig.~\ref{posterior_webs_Barbour}H), but network structure was much more similar in the observed and posterior galler-natural enemy networks than in the \emph{Salix}-galler networks. The~\citet{Barbour2016} network likely provides a better prior here than for the \emph{Salix}-galler networks, as both networks included different galler and natural enemy species. Although the two networks differ vastly in scale, and the inclusion of multiple \emph{Salix} species likely causes structural differences from~\citet{Barbour2016} despite the similar resolution of gallers and natural enemies, this result nevertheless suggests that even such a large and well-replicated network as that in~\citet{Kopelke2017} is missing many interactions. This should be a strong warning to researchers comparing structural characteristics between networks - small structural differences are likely to be masked by substantial noise resulting from sampling uncertainty.
 
 
 
