--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -369,7 +369,7 @@ DG designed the analytical approach. AC and DG wrote the code. AC performed stat
 
 \section*{Data accessibility}
 
-Data from~\citet{Kopelke2017} used in this manuscript is available from \emph{https://doi.org/10.1002/ecy.1832}. Data from~\citet{Barbour2016} used in this manuscript is available from \emph{https://doi.org/10.5061/dryad.g7805}. All code used in this manuscript is available in the online supporting information or can be accessed via \emph{github.com/cirtwill/Constructing-quantitative-interaction-networks} or https://doi.org/10.5281/zenodo.2593695.
+Data from~\citet{Kopelke2017} used in this manuscript is available from the Data Paper \emph{https://doi.org/10.1002/ecy.1832}. Data from~\citet{Barbour2016} used in this manuscript is available from \emph{https://doi.org/10.5061/dryad.g7805}. All code used in this manuscript is available in the online supporting information or can be accessed via \emph{github.com/cirtwill/Constructing-quantitative-interaction-networks} or https://doi.org/10.5281/zenodo.2593695.
 
 
 
