--- a/manuscript/CI_preprint.tex
+++ b/manuscript/CI_preprint.tex
@@ -74,7 +74,9 @@ $^\triangleright$ dominique.gravel@usherbrooke.ca
 \raggedright
 \setlength{\parindent}{15pt} 
 
-\vspace{-.4in}
+\vspace{-.2in}
+
+This is the pre-peer reviewed version. This article has been published in final form at \textbf{Methods in Ecology and Evolution} (DOI: 10.1111/2041-210X.13180). This article may be used for non-commercial purposes in accordance with Wiley Terms and Conditions for Use of Self-Archived Versions. Text of the peer-reviewed accepted version will be uploaded March 26, 2020.
 
 {\small
 \section*{\small Statement of authorship}
