--- a/manuscript/manual.bib
+++ b/manuscript/manual.bib
@@ -1,3 +1,12 @@
+@article{Cirtwill2019,
+title={A quantitative framework for investigating the reliability of empirical network construction},
+doi={10.1111/2041-210X.13180},
+journal={Methods in Ecology and Evolution},
+pages={},
+volume={Online Early View},
+author={Cirtwill, Alyssa R. and Ekl{\"{o}}f, Anna and Roslin, Tomas and Wootton, Kate and Gravel, Dominique},
+year={2019}
+}
 @article{Alberdi2018,
 author={Alberdi, Anton and Aizpurua, Ostaizka and Bohmann, Kristine and Gopalakrishnan, Shyam and Lynggaard, Christina and Nielsen, Martin and Gilber, Marcus Thomas Pius},
 title={Promises and pitfalls of using high-throughput sequencing for diet analysis},
